[package]
name = "codecrafters-interpreter"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
bytes = "1.3.0"                                  # helps manage buffers
itertools = "0.13.0"
lazy_static = "1.5.0"
thiserror = "1.0.38"                             # error handling
