[package]
name = "codecrafters-interpreter"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.89"
bytes = "1.3.0"                                  # helps manage buffers
itertools = "0.13.0"
lazy_static = "1.5.0"
num-traits = "0.2.19"
thiserror = "1.0.38"                             # error handling
